--- a/ng-app/app/index.html
+++ b/ng-app/app/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+=<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -40,6 +40,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
+              <li><a ng-href="#/posts">Posts</a></li>
               <li><a ng-href="#/">Contact</a></li>
             </ul>
           </div>
@@ -87,6 +88,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/posts.js"></script>
         <!-- endbuild -->
 </body>
 </html>
