--- a/ng-app/app/index.html
+++ b/ng-app/app/index.html
@@ -1,5 +1,4 @@
-=<!doctype html>
-<html>
+<!doctype html>
   <head>
     <meta charset="utf-8">
     <title></title>
@@ -40,7 +39,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/posts">Posts</a></li>
+              <li><a ng-href="#/product">Product</a></li>
               <li><a ng-href="#/">Contact</a></li>
             </ul>
           </div>
@@ -88,7 +87,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/controllers/posts.js"></script>
+        <script src="scripts/controllers/product.js"></script>
         <!-- endbuild -->
 </body>
 </html>
