--- a/ng-app/app/index.html
+++ b/ng-app/app/index.html
@@ -41,7 +41,7 @@
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/product">Product</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/register">Register</a></li>
             </ul>
           </div>
         </div>
@@ -82,6 +82,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+    <script src="bower_components/angular-devise/lib/devise.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -90,6 +91,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/product.js"></script>
+        <script src="scripts/controllers/register.js"></script>
         <!-- endbuild -->
 </body>
 </html>
