--- a/ng-app/app/index.html
+++ b/ng-app/app/index.html
@@ -83,6 +83,8 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
     <script src="bower_components/angular-devise/lib/devise.js"></script>
+    <script src="bower_components/angular-cookie/angular-cookie.js"></script>
+    <script src="bower_components/ng-token-auth/dist/ng-token-auth.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -92,6 +94,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/product.js"></script>
         <script src="scripts/controllers/register.js"></script>
+        <script src="scripts/controllers/login.js"></script>
         <!-- endbuild -->
 </body>
 </html>
